# OOP_LAB

./: Abstract.cpp  Abstract.h  Animal.cpp  Animal.h  CMakeLists.txt  Client.cpp  Client.h  Company.cpp  Company.h  Employee.cpp  Employee.h  Features.cpp  Features.h  Functions.cpp  Functions.h  Interface.cpp  Interface.h  Order.cpp  Order.h  Owner.cpp  Owner.h  Wrong.h  main.cpp
files/: Animals.txt  Changed.txt  Clients.txt  Order.txt
